--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,14 @@ matrix:
   include:
   - env: WP_TRAVISCI=test:e2e
     name: E2E Tests
+  - name: "wc e2e tests"
+    php: 7.2
+    env: WP_VERSION=latest WP_MULTISITE=0 RUN_E2E=1
+    addons:
+      chrome: beta
+      apt:
+        packages:
+          - nginx
   - env: WP_TRAVISCI=lint:php COMPOSER_INSTALL=true NPM_INSTALL=false WP_INSTALL=false
     name: PHP Linting
   - env: WP_TRAVISCI=travis:js WP_INSTALL=false
@@ -43,12 +51,8 @@ matrix:
     name: "PHPUnit Tests: PHP 7.1"
   - env: LOCAL_PHP=7.0-fpm WP_TEST_REPORTER=true WP_TRAVISCI=test:php
     name: "PHPUnit Tests: PHP 7.0"
-  - env: LOCAL_PHP=5.6-fpm WP_TRAVISCI=test:php
-    name: "PHPUnit Tests: PHP 5.6"
   - env: LOCAL_PHP=7.4-fpm WP_TRAVISCI=test:php
     name: "PHPUnit Tests: PHP 7.4"
-  - env: LOCAL_PHP=8.0-fpm WP_TRAVISCI=test:php
-    name: "PHPUnit Tests: PHP 8.0"
   allow_failures:
   - env: WP_TRAVISCI=test:compat COMPOSER_INSTALL=true NPM_INSTALL=false WP_INSTALL=false
   - env: LOCAL_PHP=7.4-fpm WP_TRAVISCI=test:php
@@ -109,6 +113,9 @@ before_script:
 - locale -a
 
 script:
+  - bash tests/woocommerce/bin/phpunit.sh
+  - bash tests/woocommerce/bin/phpcs.sh
+  - travis_retry bash tests/woocommerce/bin/run-e2e-CI.sh
   - |
     if [[ "$WP_TRAVISCI" == "test:e2e" ]]; then
       npm run test:e2e
